fix(css): overflow when height large then 100%

--- a/public/css/_main.css
+++ b/public/css/_main.css
@@ -31,6 +31,8 @@ button:focus {
 .page-wrapper {
     position: relative;
     max-width: calc(100% - 16rem);
+    height: 100%;
+    overflow-y: auto;
 }
 
 @media (max-width: 576px) {
